# CPHe

./: CMakeLists.txt  CMakeUserPresets.json  CPHe.rc  MainClass.h  README.md  example.txt  main.cpp
GUIInterface/: CMakeLists.txt  CodeListModel.cpp  CodeListModel.h  LanguageBackend.cpp  LanguageBackend.h  NameViewTreeModel.cpp  NameViewTreeModel.h  SignalUniquePtr.h
code/: BaseCodeVisitor.h  CMakeLists.txt  CodeAnalyzer.cpp  CodeAnalyzer.h  CodeFileReader.cpp  CodeFileReader.h  CodeSnippet.h  CppCodeFileReader.cpp  CppCodeFileReader.h  CppCodeVisitor.cpp  CppCodeVisitor.h  CppFileAnalyzer.cpp  CppFileAnalyzer.h  CppFileVisitorManager.cpp  CppFileVisitorManager.h  FileContentManager.cpp  FileContentManager.h  LibclangTool.cpp  LibclangTool.h  NameTree.cpp  NameTree.h  QFileReader.h  RuntimeErrcollector.h  SpiderVisitor.cpp  SpiderVisitor.h  codeVisitor.h  helpfulTypes.h  libClangContext.cpp  libClangContext.h  testclass.cpp  testclass.h  tools.h
gui/: CMakeLists.txt  CPHeMain.cpp  CPHeMain.h  CPHeMain.ui  HighlightDelegate.h  LambdaFileters.h  NameMapView.cpp  NameMapView.h  NameMapView.ui  PSCMainWindow.cpp  PSCMainWindow.h  PSCMainWindow.ui  PSCWidget.h  PSConsole.cpp  PSConsole.h  PSConsole.ui
workFlow/: CMakeLists.txt  PSCBuildingOperators.cpp  PSCBuildingOperators.h  PSCContext.h  PSCErrorType.h  PSCInterpreter.h  PSCLangErr.h  PSCOperators.cpp  PSCOperators.h  PSCReceivers.h  PSCTranslater.cpp  PSCTranslater.h  PSCVar.h  PSCVarDrefTool.h  SubStr.h
workFlow/base/: BaseSubContext.h  CMakeLists.txt  Intent.cpp  Intent.h  TaskFactory.h  TaskManager.cpp  TaskManager.h  WorkFlowController.h  baseOperator.h  workFlowContext.cpp  workFlowContext.h
workFlow/baseOpt/: BaseOptFactory.cpp  BaseOptFactory.h  CMakeLists.txt  ManyBaseOpts.cpp  ManyBaseOpts.h
workFlow/forCpp/: CMakeLists.txt  CppContext.cpp  CppContext.h  CppOperator.cpp  CppOperator.h  CppTaskFactory.cpp  CppTaskFactory.h  GetCppSymbol.cpp  GetCppSymbol.h  LoadCppFile.cpp  LoadCppFile.h  LoadFile.cpp  LoadFile.h  ManyCppOperators.cpp  ManyCppOperators.h
workFlow/operators/: CMakeLists.txt
